--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-sticky": "^6.0.3",
     "react-sticky-box": "^1.0.2",
     "react-sticky-sidebar": "^0.0.8",
+    "sticky-sidebar": "^3.3.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
